Use openapi templates to make interfaces for generated routes.
