# server/uuids/model_api_error.go
@@ -1,0 +1,17 @@
+/*
+ * uuid farm
+ *
+ * A farm for abandoned UUIDs
+ *
+ * API version: v1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package uuids
+
+type ApiError struct {
+
+	Code int32 `json:"code"`
+
+	Message string `json:"message"`
+}
